Minor updates to paper, update slides to match paper

--- a/outputs/paper/paper-copy.Rmd
+++ b/outputs/paper/paper-copy.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "Reproducibility of COVID-19 pre-prints"
 author: 
-  - Annie Collins^[University of Toronto.]
   - Rohan Alexander^[University of Toronto, rohan.alexander@utoronto.ca.]
-thanks: "We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. Collins thanks CANSSI Ontario and Monica Alexander for financial support. Code and data are available at: https://github.com/anniecollins/reproducibility."
+  - Annie Collins^[University of Toronto.]
+thanks: "We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. Collins thanks CANSSI Ontario and Monica Alexander for financial support. Code and data are available at: https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints."
 date: "`r format(Sys.time(), '%d %B %Y')`"
 abstract: "To examine the reproducibility of COVID-19 research, we create a dataset of pre-prints posted to arXiv, bioRxiv, medRxiv, and SocArXiv between 28 January 2020 and 30 June 2021 that are related to COVID-19. We extract the text from these pre-prints and parse them looking for keyword markers signalling the availability of the data and code underpinning the pre-print. For the pre-prints that are in our sample, we are unable to find markers of either open data or open code for 75 per cent of those on arXiv, 67 per cent of those on bioRxiv, 79 per cent of those on medRxiv, and 85 per cent of those on SocArXiv. We conclude that there may be value in having authors categorize the degree of openness of their pre-print as part of the pre-print submissions process, and more broadly, there is a need to better integrate open science training into a wide range of fields."
 output:
@@ -429,7 +429,7 @@ published_open_status %>%
   kable(caption = "Counts and proportions of open data markers by whether the pre-print was published",
         booktabs = TRUE,
         format.args = list(big.mark = ",")) %>%
-  group_rows(index = c("bioRxiv" = 2, "medRxiv" = 2, "arXiv" = 2, "SocArXiv" = 2))
+  group_rows(index = c("arXiv" = 2, "bioRxiv" = 2, "medRxiv" = 2, "SocArXiv" = 2))
 ```
 
 ```{r open-published-stack, fig.cap= "Number of pre-prints in sample with open data or open code markers \nby publication status", out.width="90%", fig.align = "center"}
@@ -457,7 +457,7 @@ It is important to note that our dataset likely imperfectly characterizes public
 
 ## Pre-pandemic pre-prints
 
-To examine the influence of the COVID-19 pandemic on open science practices in during the pandemic, we analyzed pre-prints posted between January and December 2019 from each of the four repositories using the same process as was done for the COVID-19-related pre-prints. Since medRxiv was founded in June 2019, all pre-prints posted in the latter half of 2019 were analyzed (a total of 913). For all other repositories, a random sample of 1,200 was taken from all non-COVID-19-related pre-prints posted in the relevant date range.
+To examine the influence of the COVID-19 pandemic on open science practices during the pandemic, we analyzed pre-prints posted between January and December 2019 from each of the four repositories using the same process as was done for the COVID-19-related pre-prints. Since medRxiv was founded in June 2019, all pre-prints posted in the latter half of 2019 were analyzed (a total of 913). For all other repositories, a random sample of 1,200 was taken from all non-COVID-19-related pre-prints posted in the relevant date range.
 
 ```{r 2019-results-med-arxiv, out.width="90%", fig.align='center', fig.cap = "Number of pre-prints posted per month to arXiv, bioRxiv, medRxiv, and SocArXiv in 2019"}
 bio_2019 <- bio_2019_results %>%
@@ -480,7 +480,6 @@ arxiv_2019 <- all_arxiv_2019_results %>%
 
 all_2019 <- rbind(arxiv_2019, bio_2019, med_2019, socarxiv_2019)
 
-# TODO: position = "dodge" not working
 all_2019 %>% 
   mutate(month = floor_date(date, "month")) %>% 
   # filter(year(date) >= 2020) %>% 
@@ -494,7 +493,8 @@ all_2019 %>%
   theme_minimal() +
   scale_fill_manual(values = wes_palette("Darjeeling1")) +
   facet_wrap(~type,
-             scales = "free_y")
+             scales = "free_y") +
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
 ```
 
 
@@ -653,7 +653,7 @@ Open data is generally accepted to be beneficial to the scientific process and t
 
 Open code as an open science marker is much more context and field-dependent, as not all biomedical research papers will rely on computational methods for their analyses. However, in pre-prints where code comprises a large portion of the methodology or results, posting it openly to repositories like GitHub contributes greatly to a pre-print's potential reproducibility. This gains importance as computational methods become increasingly popular in the rush to form predictions about emerging situations with limited data or laboratory research, which was the case for modelling studies in the early days of the COVID-19 pandemic. We also see growing concern over the quality and consequences of this sort of research, with bioRxiv no longer allowing purely computational work [@kwon2020].
 
-The other concern is the adverse selection issue caused by meeting the open science aims of sharing code and data. Authors that share their data and code open their work up to criticism. If authors who make their data and code available make similar mistakes to authors who choose to not publish their data and code, it is more likely that the mistake would not be noticed in the case where data and code were not published. The current system is biased against those who follow best practice. Indeed, @mcguinness2021descriptive advocate '(s)trict editorial policies that mandate data sharing'.
+The other concern is the adverse selection issue caused by meeting the open science aims of sharing code and data. Authors that share their data and code open their work up to criticism. If authors who make their data and code available make similar mistakes to authors who choose to not publish their data and code, it is more likely that the mistake would not be noticed in the case where data and code were not published. The current system is biased against those who follow best practice. Indeed, @mcguinness2021descriptive advocate for "(s)trict editorial policies that mandate data sharing."
 
 
 ## The role of pre-print repositories
