As submitted to arXiv

--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -1,4 +1,17 @@
-
+@article{Stodden2020Theme,
+journal = {Harvard Data Science Review},
+doi = {10.1162/99608f92.c46a02d4},
+number = {4},
+note = {https://hdsr.mitpress.mit.edu/pub/kincvy67},
+title = {Theme Editor's Introduction to Reproducibility and Replicability in Science},
+url = {https://hdsr.mitpress.mit.edu/pub/kincvy67},
+volume = {2},
+author = {Stodden, Victoria},
+date = {2020-12-16},
+year = {2020},
+month = {12},
+day = {16},
+}
 @article{mcguinness2021descriptive,
   title={A descriptive analysis of the data availability statements accompanying medRxiv preprints and a comparison with their published counterparts},
   author={McGuinness, Luke A and Sheppard, Athena L},
