Add tweaks for journal submission and also add link to the missing big dataset

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -3,7 +3,7 @@ title: "Reproducibility of COVID-19 pre-prints"
 author: 
   - Annie Collins^[University of Toronto.]
   - Rohan Alexander^[University of Toronto, rohan.alexander@utoronto.ca.]
-thanks: "We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. Collins thanks CANSSI Ontario and Monica Alexander for financial support. Code and data are available at: https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints."
+thanks: "**Acknowledgements:** We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. **Funding statement:** Collins thanks CANSSI Ontario and Monica Alexander for financial support. **Data accessibility statement:** Code and data are available at: https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints. **Author contributions:** Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version."
 date: "`r format(Sys.time(), '%d %B %Y')`"
 abstract: "To examine the reproducibility of COVID-19 research, we create a dataset of pre-prints posted to arXiv, bioRxiv, medRxiv, and SocArXiv between 28 January 2020 and 30 June 2021 that are related to COVID-19. We extract the text from these pre-prints and parse them looking for keyword markers signalling the availability of the data and code underpinning the pre-print. For the pre-prints that are in our sample, we are unable to find markers of either open data or open code for 75 per cent of those on arXiv, 67 per cent of those on bioRxiv, 79 per cent of those on medRxiv, and 85 per cent of those on SocArXiv. We conclude that there may be value in having authors categorize the degree of openness of their pre-print as part of the pre-print submissions process, and more broadly, there is a need to better integrate open science training into a wide range of fields."
 output:
@@ -11,6 +11,7 @@ output:
     keep_tex:  true
 toc: FALSE
 bibliography: references.bib
+csl: vancouver.csl
 ---
 
 ```{r setup, include=FALSE}
