Update Teixeira surname citation mistake

--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -35,7 +35,7 @@ day = {16},
 }
 @article{da2021optimizing,
   title={Optimizing peer review to minimize the risk of retracting COVID-19-related literature},
-  author={da Silva, Jaime A Teixeira and Bornemann-Cimenti, Helmar and Tsigaris, Panagiotis},
+  author={Teixeira da Silva, Jaime A and Bornemann-Cimenti, Helmar and Tsigaris, Panagiotis},
   journal={Medicine, Health Care and Philosophy},
   volume={24},
   number={1},
@@ -72,7 +72,7 @@ day = {16},
   }
 @article{da2021publishing,
   title={Publishing volumes in major databases related to Covid-19},
-  author={da Silva, Jaime A Teixeira and Tsigaris, Panagiotis and Erfanmanesh, Mohammadamin},
+  author={Teixeira da Silva, Jaime A and Tsigaris, Panagiotis and Erfanmanesh, Mohammadamin},
   journal={Scientometrics},
   volume={126},
   number={1},
