--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -3,7 +3,7 @@ title: "Reproducibility of COVID-19 pre-prints"
 author: 
   - Annie Collins^[University of Toronto.]
   - Rohan Alexander^[University of Toronto, rohan.alexander@utoronto.ca.]
-thanks: "**Acknowledgements:** We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. **Funding statement:** Collins thanks CANSSI Ontario and Monica Alexander for financial support. **Data accessibility statement:** Code and data are available at: https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints. **Author contributions:** Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version."
+thanks: "**Preprint:** This present manuscript is a version of a preprint by the authors [@collins2021reproducibility]. The text, tables and figures of this manuscript overlap with those of the preprint version by the authors. **Acknowledgements:** We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. **Funding statement:** Collins thanks CANSSI Ontario and Monica Alexander for financial support. **Data accessibility statement:** Code and data are available at: https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints. **Author contributions:** Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version."
 date: "`r format(Sys.time(), '%d %B %Y')`"
 abstract: "To examine the reproducibility of COVID-19 research, we create a dataset of pre-prints posted to arXiv, bioRxiv, medRxiv, and SocArXiv between 28 January 2020 and 30 June 2021 that are related to COVID-19. We extract the text from these pre-prints and parse them looking for keyword markers signalling the availability of the data and code underpinning the pre-print. For the pre-prints that are in our sample, we are unable to find markers of either open data or open code for 75 per cent of those on arXiv, 67 per cent of those on bioRxiv, 79 per cent of those on medRxiv, and 85 per cent of those on SocArXiv. We conclude that there may be value in having authors categorize the degree of openness of their pre-print as part of the pre-print submissions process, and more broadly, there is a need to better integrate open science training into a wide range of fields."
 output:
@@ -652,7 +652,7 @@ Examining publication rates for pre-pandemic papers, we observe that 41 per cent
 
 Transparency and reproducibility are hallmarks of quality scientific research due to their relationship with independent verification [@Stodden2020Theme]. Open data and open code contribute to both by allowing the scientific community to more easily verify the authenticity of purported scientific discoveries and their supporting evidence. This is especially important in cases where scientific research may quickly and directly impact clinical practice or public policy, such as research on the COVID-19 pandemic. Among many other impacts on the research landscape, COVID-19 has increased the popularity of pre-prints from both a production and consumption standpoint. The number of COVID-19 pre-prints posted to medRxiv increased in the early stages of the pandemic, while non-COVID-19 pre-print numbers were largely as expected. The same trends were apparent in abstracts accessed by medRxiv users, where COVID-19 pre-print abstracts were viewed over 15 times more than non-COVID-19 pre-print abstracts [@citeFraser]. For these reasons, it is important to examine open science standards and reproducibility within pre-print repositories.
 
-Open data is generally accepted to be beneficial to the scientific process and to a paper's reproducibility potential, hence it is concerning that around 75 per cent of pre-prints in our sample contained no open data markers. This concern is slightly mitigated by recognition of challenges in working with biomedical data compared with data in other fields, notably privacy and ethics concerns when working with personal data [@Floca2014]. The COVID-19 pandemic has seen open science initiatives, as evidenced by the creation of open data repositories such as the dashboard maintained by the Center for Systems Science and Engineering at Johns Hopkins University [@citeCSSE] or the large number of publishers who have removed paywalls from published COVID-19 research [@gill2020]. While the intention at the start of the pandemic was that there would be 'clear statements regarding the availability of underlying data' [@citeWellcome] some retractions of work have been based on 'unreliable or nonexistent data' [@da2021optimizing]. SocArXiv asks submitters to make explicit the degree of openness in the data, and this is something that could be easily adopted by other pre-print repositories.
+Open data is generally accepted to be beneficial to the scientific process and to a paper's reproducibility potential, hence it is concerning that around 75 per cent of pre-prints in our sample contained no open data markers. This concern is slightly mitigated by recognition of challenges in working with biomedical data compared with data in other fields, notably privacy and ethics concerns when working with personal data [@Floca2014]. The COVID-19 pandemic has seen open science initiatives, as evidenced by the creation of open data repositories such as the dashboard maintained by the Center for Systems Science and Engineering at Johns Hopkins University [@citeCSSE] or the large number of publishers who have removed paywalls from published COVID-19 research [@gill2020]. While the intention at the start of the pandemic was that there would be 'clear statements regarding the availability of underlying data' [@citeWellcome] some retractions of work have been based on 'unreliable or nonexistent data' [@da2021optimizing]. SocArXiv asks submitters to make explicit the degree of openness in the data, and this is something that could be adopted by other pre-print repositories.
 
 Open code as an open science marker is context and field-dependent, as not all biomedical research papers will rely on computational methods for their analyses. However, in pre-prints where code comprises a large portion of the methodology or results, posting it openly to repositories like GitHub contributes to a pre-print's potential reproducibility. This is important when computational methods are used to form predictions about emerging situations with limited data or laboratory research, which was the case for modelling studies in the early days of the COVID-19 pandemic. We also see growing concern over the quality and consequences of this sort of research, with bioRxiv no longer allowing purely computational work [@kwon2020].
 
@@ -665,11 +665,11 @@ There has been a large amount of research on COVID-19 [@da2021publishing]. Many 
 
 To emphasize the ongoing need for open data and code in modelling a pandemic, we consider two high profile epidemiological models that emerged in early 2020. Modelling was conducted by Imperial College London (ICL) [@ferguson2020] and the Institute for Health Metrics and Evaluation (IHME) at the University of Washington [@murray2020], and both were initially posted to pre-print repositories. The ICL model went on to become the most cited pre-print as of December 2020 [@else2020], and both had significant influence over policy and public health decisions worldwide [@adam2020]. An independent review of these two models by @jin2020 found that while code and data were openly available for both, only the ICL model was reproducible due to limited transparency on the underlying methodology of the IHME model. The open-source nature of these models was fundamental to reproduction attempts and is an example of the need for open data and code in COVID-19 research, particularly as pre-prints influence public decision-making. 
 
-In the context of the above factors, it was encouraging to find in our analysis that the proportion of pre-prints with open data or code posted to arXiv increased from 7 per cent pre-pandemic to 25 per cent for COVID-19-related pre-prints. This pattern, however, was not observed among the analyzed bioRxiv and medRxiv pre-prints, and may just reflect the nature of COVID-19 pre-prints. With many pre-prints from these repositories still pertaining to epidemiological modelling, one might hope that they should universally be subject to the same analysis as conducted by @jin2020 as for the examples above, which is made possible by the availability of relevant code and data. Our analysis suggests a need for future investigation and potential overall improvement in open science standards for these types of pre-prints (subject to the data and code considerations already discussed). This need is again emphasized by the new-found speed at which pre-prints may gain public, media, and political attention in the context of the pandemic, particularly those from medRxiv and bioRxiv.
+In the context of the above factors, it was encouraging to find in our analysis that the proportion of pre-prints with open data or code posted to arXiv increased from 7 per cent pre-pandemic to 25 per cent for COVID-19-related pre-prints. This pattern, however, was not observed among the analyzed bioRxiv and medRxiv pre-prints, and may just reflect the nature of COVID-19 pre-prints. With many pre-prints from these repositories still pertaining to epidemiological modelling, one might hope that they should universally be subject to the same analysis as conducted by @jin2020 as for the examples above, which is made possible by the availability of relevant code and data. Our analysis suggests a need for future investigation and potential overall improvement in open science standards for these types of pre-prints (subject to the data and code considerations already discussed). This need is again emphasized by the new-found speed at which pre-prints may gain public, media, and political attention in the context of the pandemic, particularly those from medRxiv and bioRxiv. One further concern is raised by @da2020silently, who show that there are pre-prints on those two pre-print servers---medRxiv and bioRxiv---that were withdrawn or retracted with relatively little information about the underlying reason, after gaining substantial media attention.
 
 ## The importance of open data and open code
 
-Beyond pre-prints, COVID-19 has influenced publication and peer review processes, with timelines for COVID-19 papers being expedited at the expense of longer waits for other scientific research [@else2020]. It is important that open data and code standards be maintained in published work as well. In our sample, published pre-prints contain open data or code markers in similar proportions to their unpublished counterparts, a pattern that was present for pre-prints related to COVID-19 and those posted in 2019. This appears initially to alleviate some concerns over the relationship between open data and publication bias, that is, the potential that journals have favoured novel yet less transparent or reproducible papers over those with null results but a high standard of open science practices. However, publication bias is complex and this result should be approached with caution. Concerns have already been raised through systemic reviews of COVID-19 publications [@raynaud2021], and oversights in data accessibility have led to high profile retractions of publications in the past; for example, papers from *The Lancet* and the *New England Journal of Medicine* which were withdrawn due to concerns over the private nature of their underlying dataset [@ledford2020].
+Beyond pre-prints, COVID-19 has influenced publication and peer review processes, with timelines for COVID-19 papers being expedited at the expense of longer waits for other scientific research [@else2020]. It is important that open data and code standards be maintained in published work as well. In our sample, published pre-prints contain open data or code markers in similar proportions to their unpublished counterparts, a pattern that was present for pre-prints related to COVID-19 and those posted in 2019. This appears initially to alleviate some concerns over the relationship between open data and publication bias, that is, the potential that journals have favoured novel yet less transparent or reproducible papers over those with null results but a high standard of open science practices. However, publication bias is complex and this result should be approached with caution. Concerns have already been raised through systemic reviews of COVID-19 publications [@raynaud2021], and oversights in data accessibility have led to high profile retractions of publications in the past; for example, papers from *The Lancet* and the *New England Journal of Medicine* which were withdrawn due to concerns over the private nature of their underlying dataset [@ledford2020]. Further, @cabanac2021day show that not all pre-prints are linked to their subsequent peer-reviewed publication, which may further bias our results. And @oikonomidi2020changes and @Beroe051821 show that differences between updated versions of the same pre-print can be substantial; again this is something that we do not account for and could bias our results.
 
 In all fields of science, increasing access to data and code used for pre-printed or published research is a step in the direction of more transparent, reproducible, and reliable research. The ongoing COVID-19 pandemic has created a novel, constantly changing scientific culture that should be navigated with care to uphold standards of scientific practice for both the research community and the safety of the public. Our analysis shows that there is room for improvement in the areas of open data and code availability within COVID-19 pre-print papers on arXiv, bioRxiv, medRxiv, and SocArXiv.
 
