--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -1,3 +1,58 @@
+@article {Beroe051821,
+	author = {Bero, Lisa and Lawrence, Rosa and Leslie, Louis and Chiu, Kellia and McDonald, Sally and Page, Matthew J and Grundy, Quinn and Parker, Lisa and Boughton, Stephanie and Kirkham, Jamie J and Featherstone, Robin},
+	title = {Cross-sectional study of preprints and final journal publications from COVID-19 studies: discrepancies in results reporting and spin in interpretation},
+	volume = {11},
+	number = {7},
+	elocation-id = {e051821},
+	year = {2021},
+	doi = {10.1136/bmjopen-2021-051821},
+	publisher = {British Medical Journal Publishing Group},
+	issn = {2044-6055},
+	URL = {https://bmjopen.bmj.com/content/11/7/e051821},
+	eprint = {https://bmjopen.bmj.com/content/11/7/e051821.full.pdf},
+	journal = {BMJ Open}
+}
+
+
+@article{oikonomidi2020changes,
+  title={Changes in evidence for studies assessing interventions for COVID-19 reported in preprints: meta-research study},
+  author={Oikonomidi, Theodora and Boutron, Isabelle and Pierre, Olivier and Cabanac, Guillaume and Ravaud, Philippe},
+  journal={BMC medicine},
+  volume={18},
+  number={1},
+  pages={1--10},
+  year={2020},
+  publisher={BioMed Central}
+}
+
+@article{cabanac2021day,
+  title={Day-to-day discovery of preprint--publication links},
+  author={Cabanac, Guillaume and Oikonomidi, Theodora and Boutron, Isabelle},
+  journal={Scientometrics},
+  volume={126},
+  number={6},
+  pages={5285--5304},
+  year={2021},
+  publisher={Springer}
+}
+
+@article{da2020silently,
+  title={Silently withdrawn or retracted preprints related to Covid-19 are a scholarly threat and a potential public health risk: theoretical arguments and suggested recommendations},
+  author={Teixeira da Silva, Jaime A},
+  journal={Online Information Review},
+  year={2020},
+  publisher={Emerald Publishing Limited}
+}
+
+@misc{collins2021reproducibility,
+      title={Reproducibility of COVID-19 pre-prints}, 
+      author={Annie Collins and Rohan Alexander},
+      year={2021},
+      eprint={2107.10724},
+      archivePrefix={arXiv},
+      primaryClass={stat.AP}
+}
+
 @article{Stodden2020Theme,
 journal = {Harvard Data Science Review},
 doi = {10.1162/99608f92.c46a02d4},
