--- a/outputs/paper/paper.tex
+++ b/outputs/paper/paper.tex
@@ -107,9 +107,9 @@
 \newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{#1}\break}
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
-\title{Reproducibility of COVID-19 pre-prints\thanks{\textbf{Acknowledgements:} We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. \textbf{Funding statement:} Collins thanks CANSSI Ontario and Monica Alexander for financial support. \textbf{Data accessibility statement:} Code and data are available at: \url{https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints}. \textbf{Author contributions:} Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version.}}
+\title{Reproducibility of COVID-19 pre-prints\thanks{\textbf{Preprint:} This present manuscript is a version of a preprint by the authors (Collins and Alexander 2021). The text, tables and figures of this manuscript overlap with those of the preprint version by the authors. \textbf{Acknowledgements:} We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. \textbf{Funding statement:} Collins thanks CANSSI Ontario and Monica Alexander for financial support. \textbf{Data accessibility statement:} Code and data are available at: \url{https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints}. \textbf{Author contributions:} Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version.}}
 \author{Annie Collins\footnote{University of Toronto.} \and Rohan Alexander\footnote{University of Toronto, \href{mailto:rohan.alexander@utoronto.ca}{\nolinkurl{rohan.alexander@utoronto.ca}}.}}
-\date{01 October 2021}
+\date{08 December 2021}
 
 \begin{document}
 \maketitle
@@ -410,7 +410,7 @@ Examining publication rates for pre-pandemic papers, we observe that 41 per cent
 
 Transparency and reproducibility are hallmarks of quality scientific research due to their relationship with independent verification (Stodden 2020). Open data and open code contribute to both by allowing the scientific community to more easily verify the authenticity of purported scientific discoveries and their supporting evidence. This is especially important in cases where scientific research may quickly and directly impact clinical practice or public policy, such as research on the COVID-19 pandemic. Among many other impacts on the research landscape, COVID-19 has increased the popularity of pre-prints from both a production and consumption standpoint. The number of COVID-19 pre-prints posted to medRxiv increased in the early stages of the pandemic, while non-COVID-19 pre-print numbers were largely as expected. The same trends were apparent in abstracts accessed by medRxiv users, where COVID-19 pre-print abstracts were viewed over 15 times more than non-COVID-19 pre-print abstracts (Fraser et al. 2021). For these reasons, it is important to examine open science standards and reproducibility within pre-print repositories.
 
-Open data is generally accepted to be beneficial to the scientific process and to a paper's reproducibility potential, hence it is concerning that around 75 per cent of pre-prints in our sample contained no open data markers. This concern is slightly mitigated by recognition of challenges in working with biomedical data compared with data in other fields, notably privacy and ethics concerns when working with personal data (Floca 2014). The COVID-19 pandemic has seen open science initiatives, as evidenced by the creation of open data repositories such as the dashboard maintained by the Center for Systems Science and Engineering at Johns Hopkins University (Dong, Du, and Gardner 2020) or the large number of publishers who have removed paywalls from published COVID-19 research (Gill 2020). While the intention at the start of the pandemic was that there would be `clear statements regarding the availability of underlying data' (Wellcome Trust 2020) some retractions of work have been based on `unreliable or nonexistent data' (Teixeira da Silva, Bornemann-Cimenti, and Tsigaris 2021). SocArXiv asks submitters to make explicit the degree of openness in the data, and this is something that could be easily adopted by other pre-print repositories.
+Open data is generally accepted to be beneficial to the scientific process and to a paper's reproducibility potential, hence it is concerning that around 75 per cent of pre-prints in our sample contained no open data markers. This concern is slightly mitigated by recognition of challenges in working with biomedical data compared with data in other fields, notably privacy and ethics concerns when working with personal data (Floca 2014). The COVID-19 pandemic has seen open science initiatives, as evidenced by the creation of open data repositories such as the dashboard maintained by the Center for Systems Science and Engineering at Johns Hopkins University (Dong, Du, and Gardner 2020) or the large number of publishers who have removed paywalls from published COVID-19 research (Gill 2020). While the intention at the start of the pandemic was that there would be `clear statements regarding the availability of underlying data' (Wellcome Trust 2020) some retractions of work have been based on `unreliable or nonexistent data' (Teixeira da Silva, Bornemann-Cimenti, and Tsigaris 2021). SocArXiv asks submitters to make explicit the degree of openness in the data, and this is something that could be adopted by other pre-print repositories.
 
 Open code as an open science marker is context and field-dependent, as not all biomedical research papers will rely on computational methods for their analyses. However, in pre-prints where code comprises a large portion of the methodology or results, posting it openly to repositories like GitHub contributes to a pre-print's potential reproducibility. This is important when computational methods are used to form predictions about emerging situations with limited data or laboratory research, which was the case for modelling studies in the early days of the COVID-19 pandemic. We also see growing concern over the quality and consequences of this sort of research, with bioRxiv no longer allowing purely computational work (Kwon 2020).
 
@@ -423,12 +423,12 @@ There has been a large amount of research on COVID-19 (Teixeira da Silva, Tsigar
 
 To emphasize the ongoing need for open data and code in modelling a pandemic, we consider two high profile epidemiological models that emerged in early 2020. Modelling was conducted by Imperial College London (ICL) (Ferguson et al. 2020) and the Institute for Health Metrics and Evaluation (IHME) at the University of Washington (Murray 2020), and both were initially posted to pre-print repositories. The ICL model went on to become the most cited pre-print as of December 2020 (Else 2020), and both had significant influence over policy and public health decisions worldwide (Adam 2020). An independent review of these two models by Jin et al. (2020) found that while code and data were openly available for both, only the ICL model was reproducible due to limited transparency on the underlying methodology of the IHME model. The open-source nature of these models was fundamental to reproduction attempts and is an example of the need for open data and code in COVID-19 research, particularly as pre-prints influence public decision-making.
 
-In the context of the above factors, it was encouraging to find in our analysis that the proportion of pre-prints with open data or code posted to arXiv increased from 7 per cent pre-pandemic to 25 per cent for COVID-19-related pre-prints. This pattern, however, was not observed among the analyzed bioRxiv and medRxiv pre-prints, and may just reflect the nature of COVID-19 pre-prints. With many pre-prints from these repositories still pertaining to epidemiological modelling, one might hope that they should universally be subject to the same analysis as conducted by Jin et al. (2020) as for the examples above, which is made possible by the availability of relevant code and data. Our analysis suggests a need for future investigation and potential overall improvement in open science standards for these types of pre-prints (subject to the data and code considerations already discussed). This need is again emphasized by the new-found speed at which pre-prints may gain public, media, and political attention in the context of the pandemic, particularly those from medRxiv and bioRxiv.
+In the context of the above factors, it was encouraging to find in our analysis that the proportion of pre-prints with open data or code posted to arXiv increased from 7 per cent pre-pandemic to 25 per cent for COVID-19-related pre-prints. This pattern, however, was not observed among the analyzed bioRxiv and medRxiv pre-prints, and may just reflect the nature of COVID-19 pre-prints. With many pre-prints from these repositories still pertaining to epidemiological modelling, one might hope that they should universally be subject to the same analysis as conducted by Jin et al. (2020) as for the examples above, which is made possible by the availability of relevant code and data. Our analysis suggests a need for future investigation and potential overall improvement in open science standards for these types of pre-prints (subject to the data and code considerations already discussed). This need is again emphasized by the new-found speed at which pre-prints may gain public, media, and political attention in the context of the pandemic, particularly those from medRxiv and bioRxiv. One further concern is raised by Teixeira da Silva (2020), who show that there are pre-prints on those two pre-print servers---medRxiv and bioRxiv---that were withdrawn or retracted with relatively little information about the underlying reason, after gaining substantial media attention.
 
 \hypertarget{the-importance-of-open-data-and-open-code}{%
 \subsection{The importance of open data and open code}\label{the-importance-of-open-data-and-open-code}}
 
-Beyond pre-prints, COVID-19 has influenced publication and peer review processes, with timelines for COVID-19 papers being expedited at the expense of longer waits for other scientific research (Else 2020). It is important that open data and code standards be maintained in published work as well. In our sample, published pre-prints contain open data or code markers in similar proportions to their unpublished counterparts, a pattern that was present for pre-prints related to COVID-19 and those posted in 2019. This appears initially to alleviate some concerns over the relationship between open data and publication bias, that is, the potential that journals have favoured novel yet less transparent or reproducible papers over those with null results but a high standard of open science practices. However, publication bias is complex and this result should be approached with caution. Concerns have already been raised through systemic reviews of COVID-19 publications (Raynaud et al. 2020), and oversights in data accessibility have led to high profile retractions of publications in the past; for example, papers from \emph{The Lancet} and the \emph{New England Journal of Medicine} which were withdrawn due to concerns over the private nature of their underlying dataset (Ledford and Noorden 2020).
+Beyond pre-prints, COVID-19 has influenced publication and peer review processes, with timelines for COVID-19 papers being expedited at the expense of longer waits for other scientific research (Else 2020). It is important that open data and code standards be maintained in published work as well. In our sample, published pre-prints contain open data or code markers in similar proportions to their unpublished counterparts, a pattern that was present for pre-prints related to COVID-19 and those posted in 2019. This appears initially to alleviate some concerns over the relationship between open data and publication bias, that is, the potential that journals have favoured novel yet less transparent or reproducible papers over those with null results but a high standard of open science practices. However, publication bias is complex and this result should be approached with caution. Concerns have already been raised through systemic reviews of COVID-19 publications (Raynaud et al. 2020), and oversights in data accessibility have led to high profile retractions of publications in the past; for example, papers from \emph{The Lancet} and the \emph{New England Journal of Medicine} which were withdrawn due to concerns over the private nature of their underlying dataset (Ledford and Noorden 2020). Further, Cabanac, Oikonomidi, and Boutron (2021) show that not all pre-prints are linked to their subsequent peer-reviewed publication, which may further bias our results. And Oikonomidi et al. (2020) and Bero et al. (2021) show that differences between updated versions of the same pre-print can be substantial; again this is something that we do not account for and could bias our results.
 
 In all fields of science, increasing access to data and code used for pre-printed or published research is a step in the direction of more transparent, reproducible, and reliable research. The ongoing COVID-19 pandemic has created a novel, constantly changing scientific culture that should be navigated with care to uphold standards of scientific practice for both the research community and the safety of the public. Our analysis shows that there is room for improvement in the areas of open data and code availability within COVID-19 pre-print papers on arXiv, bioRxiv, medRxiv, and SocArXiv.
 
@@ -461,6 +461,15 @@ Adam, David. 2020. {``Special Report: The Simulations Driving the World's Respon
 
 \leavevmode\hypertarget{ref-citealexandermafouz}{}%
 Alexander, Rohan, and A Mahfouz. 2021. \emph{{heapsofpapers: Easily Download Heaps of Papers}}. \url{https://rohanalexander.github.io/heapsofpapers/}.
+
+\leavevmode\hypertarget{ref-Beroe051821}{}%
+Bero, Lisa, Rosa Lawrence, Louis Leslie, Kellia Chiu, Sally McDonald, Matthew J Page, Quinn Grundy, et al. 2021. {``Cross-Sectional Study of Preprints and Final Journal Publications from COVID-19 Studies: Discrepancies in Results Reporting and Spin in Interpretation.''} \emph{BMJ Open} 11 (7). \url{https://doi.org/10.1136/bmjopen-2021-051821}.
+
+\leavevmode\hypertarget{ref-cabanac2021day}{}%
+Cabanac, Guillaume, Theodora Oikonomidi, and Isabelle Boutron. 2021. {``Day-to-Day Discovery of Preprint--Publication Links.''} \emph{Scientometrics} 126 (6): 5285--5304.
+
+\leavevmode\hypertarget{ref-collins2021reproducibility}{}%
+Collins, Annie, and Rohan Alexander. 2021. {``Reproducibility of COVID-19 Pre-Prints.''} \url{http://arxiv.org/abs/2107.10724}.
 
 \leavevmode\hypertarget{ref-citeCSSE}{}%
 Dong, Ensheng, Hongru Du, and Lauren Gardner. 2020. {``An Interactive Web-Based Dashboard to Track COVID-19 in Real Time.''} \emph{The Lancet Infectious Diseases} 20: 533--34. \url{https://doi.org/10.1016/S1473-3099(20)30120-1}.
@@ -498,6 +507,9 @@ McGuinness, Luke A, and Athena L Sheppard. 2021. {``A Descriptive Analysis of th
 \leavevmode\hypertarget{ref-murray2020}{}%
 Murray, Christopher JL. 2020. {``Forecasting the Impact of the First Wave of the COVID-19 Pandemic on Hospital Demand and Deaths for the USA and European Economic Area Countries.''} \emph{medRxiv}. \url{https://doi.org/10.1101/2020.04.21.20074732}.
 
+\leavevmode\hypertarget{ref-oikonomidi2020changes}{}%
+Oikonomidi, Theodora, Isabelle Boutron, Olivier Pierre, Guillaume Cabanac, and Philippe Ravaud. 2020. {``Changes in Evidence for Studies Assessing Interventions for COVID-19 Reported in Preprints: Meta-Research Study.''} \emph{BMC Medicine} 18 (1): 1--10.
+
 \leavevmode\hypertarget{ref-citeR}{}%
 R Core Team. 2020. \emph{{R: A Language and Environment for Statistical Computing}}. Vienna, Austria: R Foundation for Statistical Computing. \url{https://www.R-project.org/}.
 
@@ -512,6 +524,9 @@ Riedel, Nico, Miriam Kip, and Evgeny Bobrov. 2020. {``ODDPub -- a Text-Mining Al
 
 \leavevmode\hypertarget{ref-Stodden2020Theme}{}%
 Stodden, Victoria. 2020. {``Theme Editor's Introduction to Reproducibility and Replicability in Science.''} \emph{Harvard Data Science Review} 2 (4). \url{https://doi.org/10.1162/99608f92.c46a02d4}.
+
+\leavevmode\hypertarget{ref-da2020silently}{}%
+Teixeira da Silva, Jaime A. 2020. {``Silently Withdrawn or Retracted Preprints Related to Covid-19 Are a Scholarly Threat and a Potential Public Health Risk: Theoretical Arguments and Suggested Recommendations.''} \emph{Online Information Review}.
 
 \leavevmode\hypertarget{ref-da2021optimizing}{}%
 Teixeira da Silva, Jaime A, Helmar Bornemann-Cimenti, and Panagiotis Tsigaris. 2021. {``Optimizing Peer Review to Minimize the Risk of Retracting COVID-19-Related Literature.''} \emph{Medicine, Health Care and Philosophy} 24 (1): 21--26.
